--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,32 +5,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    android:orientation="vertical"
-    tools:context=".SplashActivity">
+    tools:context=".activity.SplashActivity">
 
     <ImageView
-        android:id="@+id/imv1"
-        android:layout_width="match_parent"
+        android:id="@+id/imageView"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/imv2"
-        app:srcCompat="@drawable/pokemon_logo">
-
-    </ImageView>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.37"
+        app:srcCompat="@drawable/pokemon_logo" />
 
     <ImageView
-        android:id="@+id/imv2"
-        android:layout_width="match_parent"
-        android:layout_height="480dp"
-        android:scaleType="centerCrop"
+        android:id="@+id/imageView2"
+        android:layout_width="600dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:scrollY="-200dp"
-        app:srcCompat="@drawable/world2">
-
-    </ImageView>
+        app:layout_constraintTop_toBottomOf="parent"
+        app:srcCompat="@drawable/world2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
